# python_useful_function

./: .gitignore  CLAUDE.md  README.md  VOICEVOX_README.md  cd_collection_generator.py  complete_pdf_processor.py  create_Numpy_docstring.py  create_sample_pdf.py  create_test_pdf.py  csv_to_any.py  imas.sql  imas.tsv  imas_unit_data.py  pdf_header_remover.py  pdf_to_txt.py  pdf_to_txt_advanced.py  pyproject.toml  sample.py  sample.sh  sample_boto3.py  sqlalchemy_analysis.py  ssl_verifi.py  text_formatter.py  text_to_voicevox.py  text_to_voicevox_v2.py  xlsx_to_any.py
.claude/agents/: execution-verifier.md  iac-container-specialist.md
.devcontainer/: Dockerfile  claude_desktop_config.json  devcontainer-with-docker.json  devcontainer.json  init-firewall.sh
