[tool.poetry]
name = "python-useful-function"
version = "0.1.0"
description = ""
authors = ["himihiromu <himihiromu@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.100"
xlrd = "^2.0.1"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
