[tool.poetry]
name = "python-useful-function"
version = "0.1.0"
description = ""
authors = ["himihiromu <himihiromu@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xlrd = "^2.0.1"
boto3 = "^1.35.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
